# hydra

./: .gitallowedsigners  .gitignore  .releaserc.yml  .sops.yaml  CHANGELOG.md  DEVELOP.md  LICENSE  README.md  README.md.gotpl  RELEASE.md  renovate.json
.github/actions/install-cosign/: action.yml
.github/actions/install-goreleaser/: action.yml
.github/actions/install-sops/: action.yml
.github/secrets/: age-pipeline-keys.sops.yaml  public-keys.yaml  publish.sops.yaml  release.sops.yaml
.github/workflows/: check-github-repository-settings.yml  publish.yml  release.yml  renovate.yml
docs/: agent.md
docs/develop/: agent.md
docs/manual/: README.md
docs/site/: README.md  build.sh  mkdocs.yml  pyproject.toml  serve.sh
docs/site/extra/: CNAME
docs/site/hydra_mkdocs/: __init__.py  plugin.py
docs/site/hydra_mkdocs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/site/javascripts/: asciinema-embed.js
docs/site/stylesheets/: extra.css
hydra-go/: .goreleaser.yml  AGENTS.md  README.md  go.work  go.work.sum  hydra.sh  test.sh  update_testdata.sh
hydra-go/base/: README.md  go.mod  go.sum
hydra-go/cli/: README.md  go.mod  go.sum  main.go
hydra-go/core/: README.md  go.mod  go.sum
hydra-go/testdata/: values.yaml
scripts/: build-container-image.sh  check-github-repository-settings.sh  generate-readme.sh  lint-markdown-docs.sh  publish.sh  render-readme-gotpl.go  semantic-release.sh  sign-release-tag.sh
tools/build-container-image/: Dockerfile  generate-readme.sh
tools/markdownlint/: package-lock.json  package.json
(+1454 files in other folders)
