[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-mkdocs"
version = "0.1.0"
description = "MkDocs plugins for the Hydra user manual"
requires-python = ">=3.10"
dependencies = []

[project.entry-points."mkdocs.plugins"]
hydra_manual = "hydra_mkdocs.plugin:HydraManualPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydra_mkdocs*"]
